--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/radubrehar/react-color-picker.git"
+    "url": "https://github.com/taaasty/web-static.git"
   },
   "bugs": {
     "url": "https://github.com/radubrehar/react-color-picker/issues"
